[package]
name = "solana-liquidation"
version = "0.1.0"
edition = "2021"
description = "Kamino liquidation bot"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.8"

# Solana / Anchor stack (anchor 0.32.x aligns with agave 2.x crates)
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"
solana-account-decoder = "2"
solana-program = "2"

anchor-lang = "0.32.1"
anchor-client = { version = "0.32.1", features = ["async"] }

# Kamino helpers
carbon-kamino-lending-decoder = "0.10"

# Pyth price parsing for off-chain valuation
pyth-sdk-solana = "0.7"

# Jito gRPC client for bundle sending
jito-grpc-client = "1.0"

# SPL Token program ID
spl-token = "4"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
